--- a/src/FLib/FLib.fsproj
+++ b/src/FLib/FLib.fsproj
@@ -11,5 +11,10 @@
     <Compile Include="KestrelInterop.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Lib\MyCarterApp.csproj">
+      <Name>MyCarterApp</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
